Refactored UserRepository and added UserQueryService